<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditarVinos">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/labelID"
                style="@style/labelStyle"
                android:text="@string/labelId" />

            <EditText
                android:id="@+id/inputID"
                style="@style/inputStyle"
                android:editable="false"
                android:importantForAutofill="no"
                android:inputType="number"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/labelNombre"
                style="@style/labelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/labelNombre" />

            <EditText
                android:id="@+id/inputNombre"
                style="@style/inputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/labelBodega"
                style="@style/labelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/labelBodega" />

            <EditText
                android:id="@+id/inputBodega"
                style="@style/inputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/labelColor"
                style="@style/labelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/labelColor" />

            <EditText
                android:id="@+id/inputColor"
                style="@style/inputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/labelOrigen"
                style="@style/labelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/labelOrigen" />

            <EditText
                android:id="@+id/inputOrigen"
                style="@style/inputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/labelGraduacion"
                style="@style/labelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/labelGraduacion" />

            <EditText
                android:id="@+id/inputGraduacion"
                style="@style/inputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/labelFecha"
                style="@style/labelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/labelFecha" />

            <EditText
                android:id="@+id/inputFecha"
                style="@style/inputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="number"
                tools:ignore="SpeakableTextPresentCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:text="Cancelar" />

                <Button
                    android:id="@+id/btnEditWine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:text="Editar" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>